# cryptids_api

./: Makefile  README.md  pyproject.toml  setup.cfg
app/: __init__.py  main.py
app/data/: creature.py  explorer.py  init.py  user.py
app/fake/: creature.py  explorer.py  user.py
app/model/: explorer.py  user.py
app/service/: creature.py  explorer.py  user.py
app/test/unit/data/: test_creature.py
app/test/unit/service/: test_creature.py  test_explorer.py  test_user.py
app/test/unit/web/: test_creature.py  test_explorer.py
app/web/: creature.py  explorer.py  user.py
