[tool.poetry]
name = "cryptids-api"
version = "0.1.0"
description = ""
authors = ["Elena Dobruk <elena.dobruk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
